// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-comments Renders \`pbehavior-comments\` with comments 1`] = `
<div
  class="v-list comments-list v-sheet theme--light"
  role="list"
>
  <!---->
  <div
    class="v-list-item theme--light"
    role="listitem"
    tabindex="-1"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        author-pbehavior-comment-0
      </div>
      <div
        class="v-list-item__subtitle"
      >
        <div>
          message-pbehavior-comment-0
        </div>
      </div>
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-list-item theme--light"
    role="listitem"
    tabindex="-1"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        author-pbehavior-comment-1
      </div>
      <div
        class="v-list-item__subtitle"
      >
        <div>
          message-pbehavior-comment-1
        </div>
      </div>
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-list-item theme--light"
    role="listitem"
    tabindex="-1"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        author-pbehavior-comment-2
      </div>
      <div
        class="v-list-item__subtitle"
      >
        <div>
          message-pbehavior-comment-2
        </div>
      </div>
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-list-item theme--light"
    role="listitem"
    tabindex="-1"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        author-pbehavior-comment-3
      </div>
      <div
        class="v-list-item__subtitle"
      >
        <div>
          message-pbehavior-comment-3
        </div>
      </div>
    </div>
  </div>
  <hr
    aria-orientation="horizontal"
    class="v-divider theme--light"
    role="separator"
  />
  <div
    class="v-list-item theme--light"
    role="listitem"
    tabindex="-1"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        author-pbehavior-comment-4
      </div>
      <div
        class="v-list-item__subtitle"
      >
        <div>
          message-pbehavior-comment-4
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`pbehavior-comments Renders \`pbehavior-comments\` without comments 1`] = `
<div
  class="v-list comments-list v-sheet theme--light"
  role="list"
>
  <div
    class="v-list-item theme--light"
    role="listitem"
    tabindex="-1"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        No data
      </div>
    </div>
  </div>
</div>
`;
